Use new parser in processor